k8s/data-service.yaml
##################################################################################################
# Data Service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: mysql-data-service-svc
  labels:
    app: mysql-data-service
    service: mysql-data-service-svc
spec:
  ports:
    - port: 3306
      name: http
  selector:
    app: mysql-data-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-data-service-v1
  labels:
    app: mysql-data-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-data-service
      version: v1
  template:
    metadata:
      labels:
        app: mysql-data-service
        version: v1
    spec:
      containers:
        - name: mysql-data-service
          image: docker.io/mysql:8.0.23
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          securityContext:
            runAsUser: 1000
---
apiVersion: v1
kind: Service
metadata:
  name: data-service-svc
  labels:
    app: data-service
    service: data-service-svc
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: data-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-service-v1
  labels:
    app: data-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-service
      version: v1
  template:
    metadata:
      labels:
        app: data-service
        version: v1
    spec:
      containers:
        - name: data-service
          image: docker.io/tentativafc/poc-data-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          securityContext:
            runAsUser: 1000

---
