k8s/flask-hello.yaml
##################################################################################################
# Data Service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: flask-helloworld-service
  labels:
    app: flask-helloworld
    service: flask-helloworld-service
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: flask-helloworld
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-helloworld-deployment
  labels:
    app: flask-helloworld
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-helloworld
      version: v1
  template:
    metadata:
      labels:
        app: flask-helloworld
        version: v1
    spec:
      containers:
        - name: flask-helloworld
          image: docker.io/digitalocean/flask-helloworld:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          securityContext:
            runAsUser: 1000
