k8s/orchestrator-service.yaml
##################################################################################################
# Orchestrator Service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: orchestrator-service-svc
  labels:
    service: orchestrator-service-svc
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: orchestrator-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orchestrator-service-v1
  labels:
    app: orchestrator-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orchestrator-service
      version: v1
  template:
    metadata:
      labels:
        app: orchestrator-service
        version: v1
    spec:
      containers:
        - name: orchestrator-service
          image: docker.io/tentativafc/poc-orchestrator-service:1.0.0-snapshot
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
