k8s/validation-service.yaml
##################################################################################################
# Validation Service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: mysql-validation-service-svc
  labels:
    app: mysql-validation-service
    service: mysql-validation-service-svc
spec:
  ports:
    - port: 3306
      name: http
  selector:
    app: mysql-validation-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-validation-service-v1
  labels:
    app: mysql-validation-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-validation-service
      version: v1
  template:
    metadata:
      labels:
        app: mysql-validation-service
        version: v1
    spec:
      containers:
        - name: mysql-validation-service
          image: mysql:8.0.23
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          securityContext:
            runAsUser: 1000
---
apiVersion: v1
kind: Service
metadata:
  name: validation-service-svc
  labels:
    app: validation-service
    service: validation-service-svc
spec:
  ports:
    - port: 8080
      name: http
    - port: 9090
      name: grpc
  selector:
    app: validation-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: validation-service-v1
  labels:
    app: validation-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: validation-service
      version: v1
  template:
    metadata:
      labels:
        app: validation-service
        version: v1
    spec:
      containers:
        - name: validation-service
          image: docker.io/tentativafc/poc-validation-fields-service:1.0.0-snapshot
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
            - containerPort: 9090
---
