k8s/data-service-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: data-service-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: data-service
spec:
  hosts:
  - "*"
  gateways:
  - data-service-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: data-service-svc
        port:
          number: 8080
