k8s/demo-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo
spec:
  hosts:
  - "*"
  gateways:
  - demo-gateway
  http:
  - name: "Demo Gateway"
    match:
    - uri:
        prefix: /demo
    rewrite:
      uri: "/demo"
    route:
    - destination:
        host: demo-svc
        port:
          number: 8080
