k8s/orchestrator-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: orquestrator-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: orquestrator
spec:
  hosts:
  - "*"
  gateways:
  - orquestrator-gateway
  http:
  - match:
    - uri:
        exact: /orchestrator-grpc
    route:
    - destination:
        host: orquestrator-service
        port:
          number: 8080
