k8s/service-discovery-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: service-discovery-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-discovery
spec:
  hosts:
  - "*"
  gateways:
  - service-discovery-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: service-discovery-svc
        port:
          number: 8500
