k8s/validation-service-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: validation-service-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: validation-service
spec:
  hosts:
  - "*"
  gateways:
  - validation-service-gateway
  http:
  - match:
    - uri:
        prefix: /validation-service
    rewrite:
      uri: "/"
    route:
    - destination:
        host: validation-service-svc
        port:
          number: 8080
